updating workers to route to get more info
