# src/routes/_GetWorkersRoute.py
@@ -1,5 +1,7 @@
 import os
+import time
 import psutil
+import datetime
 
 
 class GetWorkersRoute:
@@ -17,10 +19,21 @@ class GetWorkersRoute:
                     pid = f.read().replace("\n", "").strip()
                     self.workers[pid] = worker
         
-        response = {worker: "dead" for worker in self.workers.values()}
-        for proc in psutil.process_iter(["pid", "name"]):
-            proc_pid = str(proc.info["pid"])
+        response = {worker: {"status": "dead"} for worker in self.workers.values()}
+        for proc in psutil.process_iter(["pid", "status"]):
+            proc_pid = str(proc.pid)
             if proc_pid in self.workers:
-                response[self.workers[proc_pid]] = "alive"
+                creation_time = datetime.datetime.strptime(
+                    time.strftime('%Y-%m-%d %H:%M:%S', time.localtime(proc.create_time())),
+                    '%Y-%m-%d %H:%M:%S',
+                )
+                time_running = datetime.datetime.now() - creation_time
+                mem_usage = proc.memory_info().rss / (1024 * 1024)
+                response[self.workers[proc_pid]] = {
+                    "status": proc.info["status"],
+                    "createdAt": creation_time.isoformat(),
+                    "timeRunning": str(time_running),
+                    "memUsage": mem_usage
+                }
         
         return response
